# Context-Creator

./: .gitignore  MANIFEST.in  README.md  benchmark_sort.py  benchmark_sort_path.py  main.py  patch_html.py  patch_index.py  patch_js.py  patch_main.py  pyproject.toml  requirements.txt  setup.py  structure.json
context_creator/: __init__.py  cli.py  main.py
context_creator/core/: ignore.py  index.py  processor.py
context_creator/static/css/: styles.css
context_creator/static/js/: loading.js  main.js
context_creator/templates/: base.html  index.html  loading.html
home/jules/verification/: verify_frontend.py
outputs/: llm_input_20250303035601.txt
templates/: index.html  loading.html
tests/: benchmark_ignore.py  benchmark_syscalls.py  conftest.py  manual_verify.py  repro_benchmark.py  test_api.py  test_ignore.py  test_index.py  test_processor.py
